# NYCTaxiFareLPSID

./: .gitignore  LICENSE  Makefile  README.md  Rapport.docx  data_cleaning.ipynb  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
models/: linear_regression_model.joblib
src/: Choix_modèles.ipynb  data_cleaning.ipynb  model_pipeline.py
src/app/: back.py  main.py  mapping.csv  variables_labels.json
tests/: test_encode_values.py
