[project]
name = "nyctaxifarelpsid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "altair==4.2.2",
    "attrs==23.2.0",
    "blinker==1.8.2",
    "cachetools==5.4.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.0.4",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "entrypoints==0.4",
    "fonttools==4.53.1",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "googlemaps==4.6.0",
    "idna==3.7",
    "importlib-metadata==8.2.0",
    "importlib-resources==6.4.0",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "jsonschema-specifications==2023.12.1",
    "jsonschema==4.23.0",
    "kiwisolver==1.4.5",
    "markupsafe==2.1.5",
    "matplotlib==3.9.1",
    "numpy==1.26.4",
    "packaging==24.1",
    "pandas==1.4.2",
    "pillow==10.4.0",
    "plotly==5.8.0",
    "protobuf==3.20.3",
    "pyarrow==17.0.0",
    "pydeck==0.9.1",
    "pympler==1.1",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rpds-py==0.19.1",
    "scikit-learn==1.0.2",
    "scipy==1.13.1",
    "seaborn==0.11.2",
    "semver==3.0.2",
    "six==1.16.0",
    "smmap==5.0.1",
    "streamlit==1.9.0",
    "tenacity==9.0.0",
    "threadpoolctl==3.5.0",
    "toml==0.10.2",
    "toolz==0.12.1",
    "tornado==6.4.1",
    "tqdm==4.64.0",
    "tzlocal==5.2",
    "urllib3==2.2.2",
    "validators==0.33.0",
    "zipp==3.19.2",
]

[dependency-groups]
lint = [
    "ruff>=0.7.3",
]
test = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
]
dev = [
    "pytest-watcher>=0.4.3",
]
